implement hero image with text

--- a/src/_component/layout/layout.pug
+++ b/src/_component/layout/layout.pug
@@ -8,8 +8,9 @@ html(lang="en")
     meta(name="description", content="pure html, css and javascript website about beers")
   body 
   body 
-    include ../menu/menu
+    include ../hero/hero
     block content
+    include ../menu/menu
 
     link(rel="stylesheet", href=`${baseUrl}style.css`)
     script(src=`${baseUrl}bundle.js`)
