--- a/src/_component/layout/layout.scss
+++ b/src/_component/layout/layout.scss
@@ -1,21 +1,18 @@
 * {
   box-sizing: border-box;
 }
-
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,700;1,400&display=swap");
-
 html,
 body {
   margin: 0;
   height: 100%;
   font-family: "Open Sans", sans-serif;
 }
-
 .grid {
   display: grid;
   grid-gap: 10px;
   grid-template-columns: repeat(4, 1fr);
-  margin: 100px auto 0;
+  margin: 0 auto;
 }
 
 .row {
@@ -26,7 +23,6 @@ body {
     grid-template-columns: repeat(8, 1fr);
   }
 }
-
 @media screen and (min-width: 1400px) {
   .grid {
     grid-template-columns: repeat(12, 1fr);
