--- a/src/_component/layout/layout.pug
+++ b/src/_component/layout/layout.pug
@@ -7,10 +7,10 @@ html(lang="en")
     title Beer Site
     meta(name="description", content="pure html, css and javascript website about beers")
   body 
-  body 
     include ../hero/hero
     block content
     include ../menu/menu
+    include ../footer/footer
 
     link(rel="stylesheet", href=`${baseUrl}style.css`)
     script(src=`${baseUrl}bundle.js`)
