--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,4 @@
 @import "_component/layout/layout";
 @import "_component/menu/menu";
 @import "_component/hero/hero";
+@import "_component/footer/footer";
