--- a/src/style.scss
+++ b/src/style.scss
@@ -2,3 +2,4 @@
 @import "_component/menu/menu";
 @import "_component/hero/hero";
 @import "_component/footer/footer";
+@import "_component/card/card";
