refactor beer card

--- a/src/_component/footer/footer.scss
+++ b/src/_component/footer/footer.scss
@@ -1,5 +1,6 @@
 .footer {
   background-color: black;
+  margin-top: 180px;
 
   &__logo {
     background-image: url(#{$baseUrl}asset/image/logo.png);
