--- a/src/contact/index.pug
+++ b/src/contact/index.pug
@@ -1,5 +1,12 @@
 extends ../_component/layout/layout
 
+block head 
+  -
+    var pageTitle = "Contact Us"
+    var pageDescription = "Lets have a chat over a beer!"
+    var pageAuthor = "Iosif Screpciuc"
+    var pageDate = "21/06/2021"
+    
 block content 
   .grid 
     .row 
