--- a/src/_component/card/card.scss
+++ b/src/_component/card/card.scss
@@ -1,6 +1,5 @@
 .card {
   grid-column: span 4;
-  margin-bottom: 30px;
   display: flex;
   flex-direction: column;
 
@@ -19,6 +18,7 @@
   &__wrapper {
     padding: 25px;
     background-color: #2897b1;
+    position: relative;
   }
 
   &__image {
@@ -27,5 +27,24 @@
     background-repeat: no-repeat;
     background-position: center bottom;
     background-size: contain;
+  }
+
+  &__icon--thick,
+  &__icon--thin {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-repeat: no-repeat;
+    height: 32px;
+    width: 32px;
+    cursor: pointer;
+  }
+
+  &__icon--thick {
+    background-image: url(#{$baseUrl}asset/image/heart-thin-white-32.png);
+  }
+
+  &__icon--thin {
+    background-image: url(#{$baseUrl}asset/image/heart-thin-32.png);
   }
 }
