--- a/src/beers/index.pug
+++ b/src/beers/index.pug
@@ -1,6 +1,11 @@
 extends ../_component/layout/layout
 
+block head
+  -
+    var pageTitle = "Beer Page"
+    var pageDescription = "Best beers in town"
 block content 
   .grid 
     .row 
-      h1 Beer page
+      .beer
+        h1 Beer Page
