--- a/src/beers/index.pug
+++ b/src/beers/index.pug
@@ -2,10 +2,10 @@ extends ../_component/layout/layout
 
 block head
   -
-    var pageTitle = "Beer Page"
+    var pageTitle = "Beers Page"
     var pageDescription = "Best beers in town"
 block content 
   .grid 
     .row 
       .beer
-        h1 Beer Page
+        h1 Beers Page
