--- a/src/contact/index.pug
+++ b/src/contact/index.pug
@@ -2,8 +2,8 @@ extends ../_component/layout/layout
 
 block head 
   -
-    var pageTitle = "Contact Us"
-    var pageDescription = "Lets have a chat over a beer!"
+    var pageTitle = "Contact Page"
+    var pageDescription = "Lets have a chat over a coffee!"
     var pageAuthor = "Iosif Screpciuc"
     var pageDate = "21/06/2021"
     
