--- a/src/style.scss
+++ b/src/style.scss
@@ -3,3 +3,4 @@
 @import "_component/hero/hero";
 @import "_component/footer/footer";
 @import "_component/card/card";
+@import "_component/button/button";
